Use icon instead of "Discussions" text, fix bugs
- Fix admin page crash
- Only show invisible pin button on desktop; hide it completely on ≤ tablet

--- a/less/forum/DiscussionPage.less
+++ b/less/forum/DiscussionPage.less
@@ -70,7 +70,6 @@
 @media @tablet-up {
   .DiscussionPage-list {
     left: -@pane-width - 6px;
-    width: 100%;
     position: absolute;
     z-index: @zindex-pane;
     overflow: auto;
